--- a/autofill/autofill-internal/src/main/res/values/donottranslate.xml
+++ b/autofill/autofill-internal/src/main/res/values/donottranslate.xml
@@ -37,6 +37,10 @@
     <string name="autofillDevSettingsNeverSavedSitesCountSubtitle" instruction="%1$d is count of how many websites have been added to a list">Number of sites: %1$d</string>
     <string name="autofillDevSettingsNeverSavedSitesAddSampleButton">Add sample site (fill.dev)</string>
 
+    <string name="autofillDevSettingsImportPasswordsTitle">Import Passwords</string>
+    <string name="autofillDevSettingsImportPasswordsExportPasswordsOurAppTitle">Launch Google Passwords (normal tab)</string>
+    <string name="autofillDevSettingsImportPasswordsImportPasswordsCsvTitle">Import CSV</string>
+
     <string name="autofillDevSettingsOverrideMaxInstallDialogTitle">Maximum number of days since install</string>
     <string name="autofillDevSettingsOverrideMaxInstallDialogOkButtonText">OK</string>
     <string name="autofillDevSettingsOverrideMaxInstallDialogCancelButtonText">Cancel</string>
