Add custom webview for importing via GPM

--- a/autofill/autofill-impl/src/main/res/layout/fragment_import_google_passwords_webflow.xml
+++ b/autofill/autofill-impl/src/main/res/layout/fragment_import_google_passwords_webflow.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright (c) 2022 DuckDuckGo
+  ~ Copyright (c) 2024 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -14,10 +14,15 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <!-- New Tab -->
-    <string name="newTabPageShortcutPasswords">Passwords</string>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".importing.gpm.webflow.ImportGooglePasswordsWebFlowActivity">
 
-    <string name="autofillImportGooglePasswordsWebFlowTitle">Import Google Passwords</string>
-    <string name="autofillImportGooglePasswordsSuccessMessage">%1$d passwords imported from Google</string>
-</resources>
+    <WebView
+        android:id="@+id/web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</FrameLayout>
