--- a/autofill/autofill-internal/src/main/res/values/donottranslate.xml
+++ b/autofill/autofill-internal/src/main/res/values/donottranslate.xml
@@ -39,7 +39,9 @@
 
     <string name="autofillDevSettingsImportPasswordsTitle">Import Passwords</string>
     <string name="autofillDevSettingsImportPasswordsExportPasswordsOurAppTitle">Launch Google Passwords (normal tab)</string>
+    <string name="autofillDevSettingsImportPasswordsExportPasswordsImportFlowTitle">Launch Google Passwords (import flow)</string>
     <string name="autofillDevSettingsImportPasswordsImportPasswordsCsvTitle">Import CSV</string>
+    <string name="autofillDevSettingsImportGooglePasswordsSuccessMessage">%1$d passwords imported from Google</string>
 
     <string name="autofillDevSettingsOverrideMaxInstallDialogTitle">Maximum number of days since install</string>
     <string name="autofillDevSettingsOverrideMaxInstallDialogOkButtonText">OK</string>
