Implement prompt UI in VPN screen

--- a/network-protection/network-protection-impl/src/main/res/layout/dialog_auto_exclude.xml
+++ b/network-protection/network-protection-impl/src/main/res/layout/dialog_auto_exclude.xml
@@ -14,17 +14,56 @@
   ~ limitations under the License.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rounded_top_corners_bottom_sheet_background"
+    android:orientation="vertical"
+    android:padding="@dimen/keyline_4">
 
     <com.duckduckgo.common.ui.view.text.DaxTextView
         android:id="@+id/autoExcludePromptTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/keyline_4"
+        android:text="@string/netpAutoExcludePromptTitle"
+        app:textType="primary"
+        app:typography="h2" />
+
+    <com.duckduckgo.common.ui.view.text.DaxTextView
+        android:id="@+id/autoExcludePromptMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/keyline_4"
+        android:text="@string/netpAutoExcludePromptMessage"
+        app:textType="secondary"
+        app:typography="body1" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/autoExcludePromptItemsContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:textType="primary"
-        app:typography="h1" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:orientation="vertical" />
+
+    <CheckBox
+        android:id="@+id/autoExcludeCheckBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minHeight="0dp"
+        android:checked="true"
+        android:text="@string/netpAutoExcludePromptOptionEnable"
+        android:layout_marginBottom="@dimen/keyline_3"/>
+
+    <com.duckduckgo.common.ui.view.button.DaxButtonPrimary
+        android:id="@+id/autoExcludePromptAddAction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/netpAutoExcludePromptActionAdd" />
+
+    <com.duckduckgo.common.ui.view.button.DaxButtonSecondary
+        android:id="@+id/autoExcludePromptCancelAction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/netpAutoExcludePromptActionCancel" />
+</LinearLayout>
