--- a/network-protection/network-protection-impl/src/main/res/values/donottranslate.xml
+++ b/network-protection/network-protection-impl/src/main/res/values/donottranslate.xml
@@ -243,5 +243,6 @@
     <string name="netpAutoExcludePromptOptionEnable">Add incompatible apps automatically</string>
     <string name="netpAutoExcludePromptActionAdd">Add exclusions</string>
     <string name="netpAutoExcludePromptActionCancel">Not now</string>
-    <string name="netpEAutoExcludeToggleName">Automatically exclude apps not compatible with the VPN</string>
+    <string name="netpAutoExcludeToggleName">Automatically exclude apps not compatible with the VPN</string>
+    <string name="netpExclusionListLabelAutoExclude">Not compatible with VPNs</string>
 </resources>
