--- a/network-protection/network-protection-impl/src/main/res/layout/item_exclusion_list_header.xml
+++ b/network-protection/network-protection-impl/src/main/res/layout/item_exclusion_list_header.xml
@@ -14,25 +14,31 @@
   ~ limitations under the License.
   -->
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/keyline_4">
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/sectionAutoExclude"
+        layout="@layout/section_auto_exclude" />
 
     <com.duckduckgo.common.ui.view.text.DaxTextView
         android:id="@+id/exclusion_item_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/keyline_4"
         app:textType="secondary"
         app:typography="body2" />
 
     <com.duckduckgo.common.ui.view.InfoPanel
         android:id="@+id/exclusion_item_header_banner"
         style="@style/Widget.DuckDuckGo.InfoPanel"
+        android:layout_margin="@dimen/keyline_4"
         app:panelBackground="@drawable/info_panel_alert_background"
         app:panelDrawable="@drawable/ic_info_panel_alert" />
 
-</FrameLayout>
+</LinearLayout>
 
 
