--- a/network-protection/network-protection-impl/src/main/res/layout/section_auto_exclude.xml
+++ b/network-protection/network-protection-impl/src/main/res/layout/section_auto_exclude.xml
@@ -18,14 +18,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/keyline_2"
     android:orientation="vertical">
 
     <com.duckduckgo.common.ui.view.listitem.OneLineListItem
         android:id="@+id/autoExcludeToggle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/keyline_4"
+        android:layout_marginTop="@dimen/keyline_5"
+        android:layout_marginBottom="@dimen/keyline_4"
         app:primaryText="@string/netpAutoExcludeToggleName"
         app:showSwitch="true" />
 
