Launch import flow from Password management screen

--- a/autofill/autofill-impl/src/main/res/layout/autofill_management_credential_list_empty_state.xml
+++ b/autofill/autofill-impl/src/main/res/layout/autofill_management_credential_list_empty_state.xml
@@ -72,7 +72,7 @@
         android:text="@string/credentialManagementNoLoginsSavedSubtitle" />
 
     <com.duckduckgo.common.ui.view.button.DaxButtonPrimary
-        android:id="@+id/importPasswordsButton"
+        android:id="@+id/importPasswordsFromGoogleButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/emptyPlaceholderSubtitle"
@@ -80,6 +80,16 @@
         android:layout_marginTop="@dimen/keyline_5"
         app:layout_constraintTop_toBottomOf="@id/emptyPlaceholderSubtitle"
         app:buttonSize="large"
-        android:text="@string/autofillManagementImportPasswords" />
+        android:text="@string/autofillImportGooglePasswordEmptyStateButtonTitle" />
+
+    <com.duckduckgo.common.ui.view.button.DaxButtonSecondary
+        android:id="@+id/importPasswordsViaDesktopSyncButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/importPasswordsFromGoogleButton"
+        app:layout_constraintEnd_toEndOf="@id/importPasswordsFromGoogleButton"
+        app:layout_constraintTop_toBottomOf="@id/importPasswordsFromGoogleButton"
+        app:buttonSize="large"
+        android:text="@string/autofillSyncDesktopPasswordEmptyStateButtonTitle" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
