Translate strings-autofill-impl to values-hr Translate strings-autofill-impl to values-nl Translate strings-autofill-impl to values-it Translate strings-autofill-impl to values-ro Translate strings-autofill-impl to values-sk Translate strings-autofill-impl to values-sv Translate strings-autofill-impl to values-bg Translate strings-autofill-impl to values-fr Translate strings-autofill-impl to values-sl Translate strings-autofill-impl to values-lt Translate strings-autofill-impl to values-el Translate strings-autofill-impl to values-pt Translate strings-autofill-impl to values-et Translate strings-autofill-impl to values-nb Translate strings-autofill-impl to values-de Translate strings-autofill-impl to values-ru Translate strings-autofill-impl to values-tr Translate strings-autofill-impl to values-hu Translate strings-autofill-impl to values-fi Translate strings-autofill-impl to values-lv Translate strings-autofill-impl to values-pl Translate strings-autofill-impl to values-da Translate strings-autofill-impl to values-es Translate strings-autofill-impl to values-cs

--- a/autofill/autofill-impl/src/main/res/values-hu/strings-autofill-impl.xml
+++ b/autofill/autofill-impl/src/main/res/values-hu/strings-autofill-impl.xml
@@ -56,7 +56,7 @@
 
     <string name="credentialManagementSuggestionsLabel">Javasolt</string>
 
-    <string name="credentialManagementWebViewIncompatibleErrorMessage">A jelszavak automatikus kitöltése nem érhető el, mert az Android WebView verziója túl régi.</string>
+    <string name="credentialManagementWebViewIncompatibleErrorMessage">A jelszavak automatikus kitöltése nem érhető el, mert az Android WebView verziója elavult vagy nem kompatibilis.</string>
 
     <string name="autofillManagementSearchClearDescription">Megadott keresés törlése</string>
     <string name="autofillManagementNoSearchResults" instruction="Placeholder is the query the user has searched for. e.g., No results for &apos;kittens&apos;">Nincs találat erre: „%1$s”</string>
