Add icons to apps in autoexclude prompt

--- a/network-protection/network-protection-impl/src/main/res/layout/dialog_auto_exclude.xml
+++ b/network-protection/network-protection-impl/src/main/res/layout/dialog_auto_exclude.xml
@@ -42,7 +42,7 @@
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/autoExcludePromptItemsContainer"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical" />
 
