--- a/app/src/main/res/layout/item_autocomplete_search_suggestion.xml
+++ b/app/src/main/res/layout/item_autocomplete_search_suggestion.xml
@@ -60,7 +60,10 @@
         android:layout_marginStart="6dp"
         android:background="?selectableItemBackgroundBorderless"
         android:contentDescription="@string/editQueryBeforeSubmitting"
-        android:padding="3dp"
+        android:paddingStart="5dp"
+        android:paddingTop="3dp"
+        android:paddingEnd="1dp"
+        android:paddingBottom="3dp"
         android:src="@drawable/ic_autocomplete_20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
