--- a/app/src/main/res/layout/item_autocomplete_default.xml
+++ b/app/src/main/res/layout/item_autocomplete_default.xml
@@ -59,7 +59,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
         android:contentDescription="@string/editQueryBeforeSubmitting"
-        android:padding="3dp"
+        android:paddingStart="5dp"
+        android:paddingTop="3dp"
+        android:paddingEnd="1dp"
+        android:paddingBottom="3dp"
         android:src="@drawable/ic_autocomplete_20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
