--- a/app/src/main/res/drawable/ic_autocomplete_20dp.xml
+++ b/app/src/main/res/drawable/ic_autocomplete_20dp.xml
@@ -1,5 +1,5 @@
 <!--
-  ~ Copyright (c) 2019 DuckDuckGo
+  ~ Copyright (c) 2024 DuckDuckGo
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -15,11 +15,11 @@
   -->
 
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="20dp"
-        android:height="20dp"
-        android:viewportWidth="20"
-        android:viewportHeight="20">
+    android:width="20dp"
+    android:height="20dp"
+    android:viewportWidth="20"
+    android:viewportHeight="20">
     <path
-        android:pathData="M15.25,4.5C15.664,4.5 16,4.164 16,3.75C16,3.336 15.664,3 15.25,3H3.75C3.336,3 3,3.336 3,3.75V15.25C3,15.664 3.336,16 3.75,16C4.164,16 4.5,15.664 4.5,15.25L4.5,5.561L15.47,16.53C15.763,16.823 16.237,16.823 16.53,16.53C16.823,16.237 16.823,15.763 16.53,15.47L5.561,4.5L15.25,4.5Z"
-        android:fillColor="?attr/daxColorPrimaryIcon"/>
+        android:pathData="M15.25,5a0.75,0.75 0,0 0,0 -1.5h-11a0.75,0.75 0,0 0,-0.75 0.75v11a0.75,0.75 0,0 0,1.5 0V6.06l10.22,10.22a0.75,0.75 0,1 0,1.06 -1.06L6.06,5h9.19Z"
+        android:fillColor="?attr/daxColorSecondaryText"/>
 </vector>
