Differentiate favorites grid pixel based on origen

--- a/saved-sites/saved-sites-impl/src/main/res/values/attrs-saves-sites.xml
+++ b/saved-sites/saved-sites-impl/src/main/res/values/attrs-saves-sites.xml
@@ -30,9 +30,14 @@
     </declare-styleable>
 
     <!-- Favourites New Tab -->
+    <attr name="favoritesPlacement">
+        <enum name="focused_state" value="0" />
+        <enum name="new_tab" value="1" />
+    </attr>
     <declare-styleable name="FavouritesNewTabSectionView">
         <attr name="isExpandable" format="boolean"/>
         <attr name="showPlaceholders" format="boolean"/>
+        <attr name="favoritesPlacement"/>
     </declare-styleable>
 
 </resources>
