added placement to different views

--- a/app/src/main/res/layout/view_focused_view.xml
+++ b/app/src/main/res/layout/view_focused_view.xml
@@ -22,6 +22,7 @@
     android:layout_height="match_parent"
     app:isExpandable="false"
     app:showPlaceholders="false"
+    app:favoritesPlacement="focused_state"
     android:background="?attr/daxColorSurface" />
 
 
