Translate strings-duckplayer to values-el Translate strings-duckplayer to values-fi Translate strings-duckplayer to values-pl Translate strings-duckplayer to values-sl Translate strings-duckplayer to values-da Translate strings-duckplayer to values-de Translate strings-duckplayer to values-it Translate strings-duckplayer to values-es Translate strings-duckplayer to values-lt Translate strings-duckplayer to values-et Translate strings-duckplayer to values-sv Translate strings-duckplayer to values-tr Translate strings-duckplayer to values-pt Translate strings-duckplayer to values-lv Translate strings-duckplayer to values-hu Translate strings-duckplayer to values-fr Translate strings-duckplayer to values-hr Translate strings-duckplayer to values-ru Translate strings-duckplayer to values-nb Translate strings-duckplayer to values-sk Translate strings-duckplayer to values-bg Translate strings-duckplayer to values-ro Translate strings-duckplayer to values-cs Translate strings-duckplayer to values-nl

--- a/duckplayer/duckplayer-impl/src/main/res/values-et/strings-duckplayer.xml
+++ b/duckplayer/duckplayer-impl/src/main/res/values-et/strings-duckplayer.xml
@@ -16,7 +16,7 @@
   -->
 <!-- smartling.entity_escaping = false -->
 <!-- smartling.instruction_attributes = instruction -->
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="duck_player_save">Salvesta</string>
     <string name="duck_player_cancel">Loobu</string>
     <string name="duck_player_setting_title">Duck Player</string>
@@ -25,13 +25,17 @@
     <string name="duck_player_mode_always">Alati</string>
     <string name="duck_player_mode_never">Mitte kunagi</string>
     <string name="duck_player_mode_always_ask">Küsi iga kord</string>
-    <string name="duck_player_mode_dialog_title">Kas avada YouTube\'i videod Duck Playeris?</string>
+    <string name="duck_player_mode_dialog_title">Kas avada Youtube\'i videod Duck Playeris?</string>
     <string name="duck_player_close_modal_content_description">Sulge</string>
-    <string name="duck_player_info_modal_title_from_duck_player_page">Kas näed YouTube\'i kasutades massiliselt reklaame? Mitte Duck Playeriga!</string>
-    <string name="duck_player_info_modal_title_from_overlay">Kas näed YouTube\'i kasutades massiliselt reklaame? Proovi Duck Playerit!</string>
+    <string name="duck_player_info_modal_title_from_duck_player_page">Kas näed Youtube\'i kasutades massiliselt reklaame? Mitte Duck Playeriga!</string>
+    <string name="duck_player_info_modal_title_from_overlay">Kas näed Youtube\'i kasutades massiliselt reklaame? Proovi Duck Playerit!</string>
     <string name="duck_player_info_modal_text">Duck Player võimaldab sul DuckDuckGo-s YouTube\'i vaadata ilma sihitud reklaamideta ja see, mida vaatad, ei mõjuta sinu soovitusi.</string>
     <string name="duck_player_info_modal_button">Sain aru!</string>
     <string name="duck_player_unavailable">Duck Player ei ole saadaval</string>
     <string name="duck_player_unavailable_description">Duck Playeri funktsionaalsust on mõjutanud hiljutised YouTube\'i muudatused. Töötame nende probleemide lahendamise nimel ja täname sind mõistva suhtumise eest.</string>
     <string name="duck_player_unavailable_learn_more">Loe edasi</string>
+    <!-- TODO: Remove this ignore when the translation is added -->
+    <string name="duck_player_open_videos_setting" tools:ignore="MissingTranslation">Kas avada Youtube\'i videod Duck Playeris?</string>
+    <!-- TODO(cbarreiro): Add missing translations asap -->
+    <string name="duck_player_open_in_a_new_tab_setting" tools:ignore="MissingTranslation">Ava Duck Player uues vahekaardis</string>
 </resources>
